
 - (expected) Porting of performance and bug fixes from 42ITy project

 - (expected) Bug fixes for fallout possible due to "fightwarn" effort in 2.8.0

 - upsd: Fixed conditions for "no listening interface available" diagnosis
   to check how many listeners we succeeded with, not whether the first one
   succeeded or not. If not all requested (non-localhost) listeners were
   available, default to fail the daemon start-up attempt. [#723]

 - nut-usbinfo.pl, nut-scanner and libnutscan:
   * USB VendorID:ProductID support list files generated by the script for
     different OS frameworks now include a comment with other possibly
     compatible driver names, where the respective file format allows for
     comments.
   * Added the concept of `alt_driver_names` in `nutscan_device_t` structure
     for ability to suggest a comment with other possibly compatible driver
     names in configuration snippets generated by `nut-scanner`; practical
     support implemented for USB connected drivers. Library API version
     bumped to 2.3.0 accordingly.

 - NUT CI improvements:
   * Added publishing recipes for PyNUT client bindings for NUT, so it ends
     up in the link:https://pypi.org/project/PyNUTClient[PyPI repository].
     [#2158]

Release notes for NUT 2.8.1 - what's new since 2.8.0
----------------------------------------------------

https://github.com/networkupstools/nut/milestone/8

 - "UPS management protocol", Informational RFC 9271 published
   by IETF at https://www.rfc-editor.org/info/rfc9271 and the
   IANA port number registry was updated accordingly at
   https://www.iana.org/assignments/service-names-port-numbers/service-names-port-numbers.xhtml?search=3493
   (even though this RFC is not formally an Internet Standard)

 - NUT documentation files were rearranged, renaming some to `*.adoc` pattern
   to facilitate automatic rendering in GitHub and IDE GUIs, and adding recipe
   support for GitHub issue/PR links. This `NEWS` file is now proper asciidoc