@@ -43,14 +43,24 @@
 
 MODE=none
 
-# Uncomment this to allow starting the service even if `ups.conf` has no device
-# sections configured at the moment. This environment variable overrides the
-# built-in "false" flag in `upsd`, and an optional same-named default flag that
-# can be set in `upsd.conf`. If you want a data server always running, even if
-# it initially has nothing to serve (may be live-reloaded later, when devices
-# become configured), this option is for you.
+# Uncomment this to allow starting the `upsd` data server even if `ups.conf`
+# has no device sections configured at the moment. This environment variable
+# overrides the built-in "false" flag in `upsd`, and an optional same-named
+# default flag that can be set in `upsd.conf`. If you want a data server always
+# running, even if it initially has nothing to serve (may be live-reloaded
+# later, when devices become configured), this option is for you.
 #ALLOW_NO_DEVICE=true
 #export ALLOW_NO_DEVICE
+
+# Uncomment this to allow starting the `upsd` data server even if not all
+# `LISTEN` directives can be honoured at the moment. This environment variable
+# overrides the built-in "false" flag in `upsd`, and an optional same-named
+# default flag that can be set in `upsd.conf`. If you want a data server always
+# running, even if it would potentially not serve all clients on every uptime,
+# this option is for you (note you would have to restart `upsd` to pick up the
+# `LISTEN`ed IP address if it appears later). Probably `LISTEN *` is better.
+#ALLOW_NOT_ALL_LISTENERS=true
+#export ALLOW_NOT_ALL_LISTENERS
 
 # The optional 'UPSD_OPTIONS' allow to set upsd specific command-line options.
 # It is ignored when 'MODE' above indicates that no upsd should be running.
