@@ -45,6 +45,25 @@
 # to start if zero device sections were found in ups.conf. This is the default.
 
 # =======================================================================
+# ALLOW_NOT_ALL_LISTENERS <Boolean>
+# ALLOW_NOT_ALL_LISTENERS true
+#
+# Normally upsd requires that all `LISTEN` directives can be honoured at the
+# moment the daemon starts. If your LAN IP address (or host name) used in one
+# of the `LISTEN` directives may be not always accessible, and for some reason
+# do not want to just `LISTEN *` on the wildcard interface, but e.g. you still
+# want to use `upsmon` on `localhost`, this option can help. Note you would
+# have to restart `upsd` to pick up the `LISTEN`ed IP address if it appears
+# later.
+#
+# Boolean values 'true', 'yes', 'on' and '1' mean that the server would not
+# refuse to start if it can listen on at least one interface.
+#
+# Boolean values 'false', 'no', 'off' and '0' mean that the server should
+# refuse to start if it can not LISTEN on each and every (non-localhost)
+# interface found in upsd.conf. This is the default.
+
+# =======================================================================
 # STATEPATH <path>
 # STATEPATH /var/run/nut
 #
