@@ -42,7 +42,8 @@ https://github.com/networkupstools/nut/milestone/10
  - upsd: Fixed conditions for "no listening interface available" diagnosis
    to check how many listeners we succeeded with, not whether the first one
    succeeded or not. If not all requested (non-localhost) listeners were
-   available, default to fail the daemon start-up attempt. [#723]
+   available, default to fail the daemon start-up attempt; support for an
+   `ALLOW_NOT_ALL_LISTENERS` setting was added to control this behavior. [#723]
 
  - nut-usbinfo.pl, nut-scanner and libnutscan:
    * USB VendorID:ProductID support list files generated by the script for
